<resources>
    <string name="app_name">Paper Scanner</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="ad_attribution">Ad</string>
    <string name="action_create_new_folder">Create new folder</string>
    <string name="action_import_from_gallery">Import from Gallery</string>
    <string name="alert_fail_decode">Cannot Decode Image From Path, Please try again.</string>
    <string name="alert_fail_open">Image Open Failure, Please try again.</string>
    <string name="alert_fail_read_image">Can\'t read Image. Please try again</string>
    <string name="alert_file_name_empty">File name can not be empty!</string>
    <string name="alert_folder_name_emptry">Folder name can not be empty!</string>
    <string name="alert_height_empty">Height can not be empty!</string>
    <string name="alert_height_range">Height should be in range 3 ~ 2048!</string>
    <string name="alert_invalid_pdf">Invalid PDF.</string>
    <string name="alert_lock">Locked file</string>
    <string name="alert_locked_file">Locked file</string>
    <string name="alert_name_empty">Name can not be empty!</string>
    <string name="alert_no_camera">Can\'t get Camera correctly. Please try it again.</string>
    <string name="alert_pdf_fail">Sorry, Cannot Create PDF. Please try again.</string>
    <string name="alert_pdf_password_emptry">PDF Password can not be empty!</string>
    <string name="alert_pdf_size_delete">One should be exist.</string>
    <string name="alert_premium_folders_message">Unlimited folders is a premium feature</string>
    <string name="alert_premium_folders_title">Unlimited folders</string>
    <string name="alert_premium_hd_message">HD is a premium feature</string>
    <string name="alert_premium_ocr_message">Unlimited OCR is a premium feature</string>
    <string name="alert_premium_ocr_title">Unlimited OCR</string>
    <string name="alert_select_region">Please select region to crop</string>
    <string name="alert_sorry">Sorry, Cannot continue operation, please try again.</string>
    <string name="alert_tag_name_dupliacted">Tag name can not be duplicated!</string>
    <string name="alert_tag_name_max_length">Tag name max length is 20</string>
    <string name="alert_tag_text_empty">Tag can not be empty!</string>
    <string name="alert_take_picture_failed">Camera isn\'t ready. Please try again…</string>
    <string name="alert_width_empty">Width can not be empty!</string>
    <string name="alert_width_range">Width should be in range 3 ~ 2048</string>
    <string name="app_subtitle">Camera Scanner To PDF</string>
    <string name="appbid_back">Back</string>
    <string name="appsee_no_btn">No, I disagree to this analytics</string>
    <string name="appsee_ok_btn">Yes, continue improving the app</string>
    <string name="appsee_pay_btn">Pay for the premium ad-free version</string>
    <string name="appsee_question_line_text">Can we continue to analyze sessions to tailor the app for you?</string>
    <string name="appsee_second_line_end">Learn about our privacy policy</string>
    <string name="appsee_second_line_start">Our analytics partners will collect data and analyze visual sessions to improve your app experience, you can opt out by installing the non Beta version of the app directly from google play store.</string>
    <string name="back">Back</string>
    <string name="backup_cloud_none">None</string>
    <string name="backup_cloud_type">Cloud Type</string>
    <string name="backup_sync">Sync Now</string>
    <string name="backup_wifi_only">Wifi only</string>
    <string name="best_quality">Best Quality</string>
    <string name="best_quality_output_alert">Best Quality PDF is a premium feature</string>
    <string name="best_quality_scan_alert">Best Quality Scan is a premium feature</string>
    <string name="camera_batch">Batch</string>
    <string name="camera_flash">Flash</string>
    <string name="camera_grid">Grid</string>
    <string name="camera_single">Single</string>
    <string name="change_group_name">Rename</string>
    <string name="compare">Compare</string>
    <string name="copied">Text copied to clipboard</string>
    <string name="copy">Copy</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="crop">Crop</string>
    <string name="dbx_scheme">db-805yl59c78lbw24</string>
    <string name="degree">%s °</string>
    <string name="dialog_message_changes">Changes you made won\'t be saved</string>
    <string name="dialog_message_ocr_cache">Saved text will be removed</string>
    <string name="dialog_title_sure">Are you sure?</string>
    <string name="drag_here_to_remove">Drag here to remove</string>
    <string name="edit_footer_sign">Sign</string>
    <string name="email">Email</string>
    <string name="error_can_not_take_image">Can\'t take image</string>
    <string name="error_invalid_character">Invalid character.</string>
    <string name="export_document_as">Export document as:</string>
    <string name="export_save">save</string>
    <string name="export_share">share</string>
    <string name="file_provider_authority">com.camerascanner.paperscanner.pdfcreator</string>
    <string name="filter_auto">Auto</string>
    <string name="filter_bw">B &amp; W</string>
    <string name="filter_bw2">B &amp; W2</string>
    <string name="filter_gray">Gray</string>
    <string name="filter_light">Lighten</string>
    <string name="filter_original">Original</string>
    <string name="filter_polish">Polish</string>
    <string name="folder_root">/root</string>
    <string name="gpu_brightness">Brightness</string>
    <string name="gpu_contrast">Contrast</string>
    <string name="hint_pdf_password">Input PDF Password</string>
    <string name="hint_pdf_size_height">Height: 3 ~ 2048</string>
    <string name="hint_pdf_size_name">Size Name:</string>
    <string name="hint_pdf_size_width">Width: 3 ~ 2048</string>
    <string name="hint_tag_name">Input Tag</string>
    <string name="how_many_columns">How many columns?</string>
    <string name="image">image</string>
    <string name="loading_and_process_image">Loading and Processing Image…</string>
    <string name="make_sure_right_language">Make sure you select the right language</string>
    <string name="merge">Merge</string>
    <string name="message">Message</string>
    <string name="message_tag_exit">Do you want to exit without changes?</string>
    <string name="move">Move</string>
    <string name="msg_delete">Once deleted, the doc cannot be recovered. Are you sure you want to delete it?</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The code contents may be invalid.</string>
    <string name="msg_tag_delete">Are you sure you want to delete this tag?</string>
    <string name="nav_rate_us">Rate us</string>
    <string name="nav_setting">Settings</string>
    <string name="network_try_later">No available network, please try later!</string>
    <string name="ocr">OCR</string>
    <string name="ocr_fail_message">probably due to wrong language\10selection, Confirm to select another\10language?</string>
    <string name="ocr_fail_ok">Change language</string>
    <string name="ocr_fail_title">Cloud OCR failed</string>
    <string name="ocr_lang_column_more_than_one">More than one</string>
    <string name="ocr_lang_column_one">One</string>
    <string name="ocr_process">OCR Processing..</string>
    <string name="ocr_retake">Retake</string>
    <string name="ocr_select_document_language">Select Document Language</string>
    <string name="ocr_select_language">Select Language</string>
    <string name="ocr_share">Share</string>
    <string name="open_geo">Open Maps</string>
    <string name="open_url">Open URL</string>
    <string name="pdf">pdf</string>
    <string name="pdf_password_alert">File is password protected, viewing the PDF is possible with this app - https://play.google.com/store/apps/details?id=com.adobe.reader</string>
    <string name="pdf_reader_alert">Viewing the PDF is possible with this app - https://play.google.com/store/apps/details?id=com.adobe.reader</string>
    <string name="permission_camera">ACCESS TO CAMERA</string>
    <string name="permission_force_denied">You have forcefully denied</string>
    <string name="permission_force_denied_to_do">permission for this action. Please open settings, go to permissions and allow them.</string>
    <string name="permission_setting">Settings</string>
    <string name="permission_storage">ACCESS TO STORAGE</string>
    <string name="permission_title">Permissions Required</string>
    <string name="permissions_error">You did not allow all required permissions</string>
    <string name="premium_feature_hd_quality">HD quality</string>
    <string name="process_document">Process Document</string>
    <string name="qr_scan">QR Scan</string>
    <string name="rateuslib_describe_why">Describe why</string>
    <string name="rateuslib_rate_question">How Would You Rate Our App Experience?</string>
    <string name="rateuslib_rate_us_googleplay">Rate us on Google Play</string>
    <string name="rateuslib_rate_us_text">Mind recommending us to others by rating us on the Play Store?</string>
    <string name="rateuslib_rating_answer0">Awful!</string>
    <string name="rateuslib_rating_answer1">Bad!</string>
    <string name="rateuslib_rating_answer2">Normal!</string>
    <string name="rateuslib_rating_answer3">Good!</string>
    <string name="rateuslib_rating_answer4">Yay!</string>
    <string name="rateuslib_send_feedback">Send feedback</string>
    <string name="rateuslib_thanks">Thanks for making all this better!</string>
    <string name="recognized_qr">Recognized QR code</string>
    <string name="recognized_text">Recognized text</string>
    <string name="recrop">Re-crop</string>
    <string name="rotate_l">Rotate L</string>
    <string name="rotate_r">Rotate R</string>
    <string name="save_image_alert">Saved images into the gallery</string>
    <string name="save_ocr_language">Select language</string>
    <string name="save_pdf_alert">Saved PDF in</string>
    <string name="set_quality">Set Quality:</string>
    <string name="setting_advertisment">Advertising</string>
    <string name="setting_collecting">Collection of Information</string>
    <string name="setting_display_pdf">Display &amp; PDF</string>
    <string name="setting_enhancement">ENHANCEMENT SETTINGS</string>
    <string name="setting_enhancement_batch">Batch-Scan Settings</string>
    <string name="setting_enhancement_single">Single-Scan Settings</string>
    <string name="setting_general">GENERAL SETTINGS</string>
    <string name="setting_img_quality">Image Quality</string>
    <string name="setting_img_size">Image Size</string>
    <string name="setting_language">Language</string>
    <string name="setting_language_apply">Apply</string>
    <string name="setting_language_ar">العربية</string>
    <string name="setting_language_de">Deutsche</string>
    <string name="setting_name_sample">SAMPLE</string>
    <string name="setting_name_tag_day">DAY</string>
    <string name="setting_name_tag_hour">HOUR</string>
    <string name="setting_name_tag_minute">MINUTE</string>
    <string name="setting_name_tag_month">MONTH</string>
    <string name="setting_name_tag_second">SECOND</string>
    <string name="setting_name_tag_tag">TAG</string>
    <string name="setting_name_tag_year">YEAR</string>
    <string name="setting_name_template">NAME TEMPLATE</string>
    <string name="str_date"></string>
    <string name="str_delete">Delete</string>
    <string name="str_folder_hint">Input folder name</string>
    <string name="str_search">Search</string>
    <string name="str_sign_cancel">Cancel</string>
    <string name="str_sign_clear">Clear</string>
    <string name="str_sign_crop_title">Crop Signature</string>
    <string name="str_sign_done">Done</string>
    <string name="str_sort_by">Sort by...</string>
    <string name="tag">Tag</string>
</resources>